--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
             <div class="score">
                 <p id="comp-score" class="total-score">0</p>
-                <p>Comps</p>
+                <p>Computer</p>
             </div>
         </div>
 
         <div class="msg-container">
-            <p id="msg">Play your move</p>
+            <p id="msg">Turn your move</p>
         </div>
 
     </main>
